--- a/src/main/resources/templates/profile/crop_image.html
+++ b/src/main/resources/templates/profile/crop_image.html
@@ -2,7 +2,9 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3" layout:decorator="_layout">
 	<head>
-		<title th:text="#{user.image.cropping.title}"></title>		
+		<title th:text="#{user.image.cropping.title}"></title>
+		<link rel="stylesheet" th:href="@{/css/croppie.css}" />
+		<link rel="stylesheet" th:href="@{/css/pages/crop-image.css}" />
 		<script type="text/javascript" th:src="@{/js/croppie.min.js}" charset="UTF-8"></script>
 		<script type="text/javascript" th:src="@{/js/exif.js}" charset="UTF-8"></script>
 		<script type="text/javascript" th:src="@{/js/pages/crop_image.js}" charset="UTF-8"></script>
