--- a/src/main/resources/templates/image/imageGroup.html
+++ b/src/main/resources/templates/image/imageGroup.html
@@ -3,6 +3,7 @@
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3" layout:decorator="_layout">
 	<head>
 		<title th:text="#{image.group.title}"></title>
+		<script type="text/javascript" th:src="@{/js/pages/image_group.js}" charset="UTF-8"></script>
 	</head>
 	<body>
 		<div layout:fragment="content" class="container">
