--- a/src/main/resources/templates/matches/form.html
+++ b/src/main/resources/templates/matches/form.html
@@ -3,6 +3,7 @@
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3" layout:decorator="_layout">
 <head>
 	<title th:text="#{matches.form.title}"></title>
+	<link rel="stylesheet" th:href="@{/css/bootstrap-datetimepicker.min.css}" media="screen"/>
 	<script type="text/javascript" th:src="@{/js/pages/edit_match.js}" charset="UTF-8"></script>
 </head>
 <body>
@@ -72,8 +73,10 @@
 					</div>
 				</div>
 			</div>
+			<script type="text/javascript" th:src="@{/js/bootstrap-datetimepicker.js}" charset="UTF-8"></script>
+			<script type="text/javascript" th:src="@{/js/bootstrap-datetimepicker.de.js}" charset="UTF-8"></script>
+			<script type="text/javascript" th:src="@{/js/datepicker-selection.js}" charset="UTF-8"></script>
 		</form>
-	</div>
-	
+	</div>	
 </body>
 </html>
