--- a/src/main/resources/templates/info/edit_info.html
+++ b/src/main/resources/templates/info/edit_info.html
@@ -23,7 +23,7 @@
                     </script>
                     <br />
                     <button type="submit" class="btn btn-primary" th:text="#{button.save}"></button>
-                    <a href="#" th:href="@{/info/rules}" class="btn btn-default" role="button" th:text="#{button.cancel}"></a>
+                    <a href="#" th:href="@{${'/info/' + infoCommand.name}}" class="btn btn-default" role="button" th:text="#{button.back}"></a>
 				</div>
 			</div>
 		</form>
