--- a/src/main/resources/templates/info/statistic.html
+++ b/src/main/resources/templates/info/statistic.html
@@ -12,7 +12,7 @@
 				<div class="col-xs-12 col-sm-6 col-md-4" th:each="statistic : ${statisticList}">
 					<div class="panel panel-default">
 						<div class="panel-heading">
-							<span th:replace="fragments/profileImage :: profile_image_small(${@securityService.getUserProfileImageKeyFor(statistic.username)})"></span>
+							<span th:replace="fragments/profile_image :: profile_image_small(${@securityService.getUserProfileImageKeyFor(statistic.username)})"></span>
 							<span th:text="${statistic.username} + ' (' + ${statistic.getSum()} + ') '"></span>
 							<span th:if="${statistic.minPointsCandidate}" class="glyphicon glyphicon-lamp red" aria-hidden="true"></span>
 							<span th:if="${statistic.maxPointsCandidate}" class="fa fa-star blue" aria-hidden="true"></span>
