--- a/src/main/resources/templates/bet/others.html
+++ b/src/main/resources/templates/bet/others.html
@@ -34,14 +34,14 @@
 							<div class="col-xs-4 top-bottom-space no-left-right-padding">
 								<span th:text="${bet.userName}" class="ranking-name"></span>			  									  		
 				  			</div>					
-				  			<div class="col-xs-4 top-bottom-space">
+				  			<div class="col-xs-4 top-bottom-space no-right-padding">
 				  				<span class="label label-as-badge big-badge label-success" th:classappend="${T(de.fred4jupiter.fredbet.web.CssHelper).getCssClassPenaltyWinnerOne(bet)}" 
 				  					th:text="${bet.goalsTeamOne}"></span>
 							  	<span> : </span>
 						  		<span class="label label-as-badge big-badge label-success" th:classappend="${T(de.fred4jupiter.fredbet.web.CssHelper).getCssClassPenaltyWinnerTwo(bet)}" 
 						  			th:text="${bet.goalsTeamTwo}"></span>	  			
 				  			</div>  			
-				  			<div class="col-xs2 top-bottom-space">
+				  			<div class="col-xs-2 top-bottom-space">
 				  				<span class="label label-as-badge big-badge label-warning" th:text="${bet.points}"></span>
 				  			</div>
      					</div>     					
