update system infos; make div responsive

--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -97,6 +97,11 @@ h3 {
 	background-color: lavender;
 }
 
+.panel-text-responsive {
+	overflow-x: scroll;
+	white-space: nowrap;	
+}
+
 .custom-button-group {
 	float: right;
 	padding-right: 15px;
