--- a/src/main/resources/templates/admin/systeminfo.html
+++ b/src/main/resources/templates/admin/systeminfo.html
@@ -12,7 +12,7 @@
 						<div class="user panel-heading">
 							  <span th:text="${entry.key}"></span>
 						</div>
-						<div class="panel-body">
+						<div class="panel-body panel-text-responsive">
 							 <span th:text="${entry.value}"></span>
 						</div>
 					</div>
