--- a/src/main/resources/templates/admin/excel_import.html
+++ b/src/main/resources/templates/admin/excel_import.html
@@ -1,34 +1,39 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3" layout:decorator="_layout">
-<head>
-	<title th:text="#{excel.import.title}"></title>
-</head>
-<body>
-	<div layout:fragment="content">
-		<div th:replace="fragments/alert :: alert_headline"></div>
-		<h1 th:text="#{excel.import.title}"></h1>
-		<div class="col-xs-12 col-sm-6 col-md-4">
-			<div class="row">
-				<a href="#" th:href="@{/excelimport/download/template}" th:text="#{excel.download.template}" class="btn btn-primary"></a>
-			</div>
-			<hr/>
-			<div class="row">
-				<a href="#" th:href="@{/excelimport/download/confcup2017}">Conferderations Cup 2017</a>
-			</div>
-			<hr/>
-			<div class="row">
-				<form th:action="@{/excelimport/upload}" th:object="${excelUploadCommand}" method="post" enctype="multipart/form-data" role="form">
-					<div class="form-group">
-						<label th:text="#{excel.upload.file}"></label><br/>
-				    	<input type="file" th:field="*{myFile}" class="btn btn-default btn-file" />
-					</div>
-					<div class="form-group">
-						<input type="submit" class="btn btn-primary" th:value="#{excel.upload.button}" />
-					</div>		
-				</form>
+	<head>
+		<title th:text="#{excel.import.title}"></title>
+	</head>
+	<body>
+		<div layout:fragment="content">
+			<div th:replace="fragments/alert :: alert_headline"></div>
+			<h2 th:text="#{excel.import.title}"></h2>
+			<div class="col-xs-12 col-sm-6 col-md-4">
+				<div class="row">
+					<div class="panel panel-default">
+						<div class="user panel-heading">
+							  <span th:text="#{excel.download.template.name}"></span>
+						</div>
+						<div class="panel-body">
+							<a href="#" th:href="@{/excelimport/download/template}" th:text="#{excel.download.template}"></a>
+							<br/>
+							<br/>
+							<a href="#" th:href="@{/excelimport/download/confcup2017}">Conferderations Cup 2017</a>
+						</div>
+					</div>			
+				</div>	
+				<div class="row">
+					<form th:action="@{/excelimport/upload}" th:object="${excelUploadCommand}" method="post" enctype="multipart/form-data" role="form">
+						<div class="form-group">
+							<label th:text="#{excel.upload.file}"></label><br/>
+					    	<input type="file" th:field="*{myFile}" class="btn btn-default btn-file" />
+						</div>
+						<div class="form-group">
+							<input type="submit" class="btn btn-primary" th:value="#{excel.upload.button}" />
+						</div>		
+					</form>
+				</div>
 			</div>
 		</div>
-	</div>
-</body>
+	</body>
 </html>
