--- a/src/main/resources/templates/info/statistic.html
+++ b/src/main/resources/templates/info/statistic.html
@@ -9,7 +9,7 @@
 			<div th:replace="fragments/alert :: alert_headline"></div>
 			<h1 th:text="#{statistics.title}"></h1>		
 			<div class="row">
-				<div class="col-xs-12 col-sm-6 col-md-4" th:each="statistic : ${statisticList}">
+				<div class="col-xs-12 col-sm-6 col-md-4" th:each="statistic : ${statisticList}" style="max-height: 176px;">
 					<div class="panel panel-default">
 						<div class="panel-heading">
 							<span th:replace="fragments/profile_image :: profile_image_small(${@securityService.getUserProfileImageKeyFor(statistic.username)})"></span>
