--- a/src/main/resources/templates/user/create.html
+++ b/src/main/resources/templates/user/create.html
@@ -1,37 +1,37 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3" layout:decorator="_layout">
-<head>
-	<title th:text="#{user.create.title}"></title>
-</head>
-<body>
-	<div layout:fragment="content" class="container">
-		<div th:replace="fragments/alert :: alert_headline"></div>
-		<form id="userForm" th:action="@{/user}" th:object="${userCommand}" action="#" method="post" role="form">
-			<div class="row">
-				<div class="col-xs-12 col-sm-6 col-md-4">
-					<input type="hidden" th:field="*{userId}" class="form-control" />
-					<div class="form-group">
-						<label for="username" th:text="#{user.create.username} + ':'"></label> 
-						<input type="text" th:field="*{username}" class="form-control" />
-					</div>
-					<div class="form-group">
-						<label for="password" th:text="#{user.create.password} + ':'"></label> 
-						<input type="password" th:field="*{password}" class="form-control" />
-					</div>
-					<ul class="list-group">
-						<li class="list-group-item" th:each="role : ${userCommand.availableRoles}">
-							<input type="radio" th:field="*{roles}" th:value="${role}" th:disabled="${@securityService.isRoleSelectionDisabledForUser(userCommand.username)}" />
-							<label th:for="${#ids.prev('roles')}" th:text="#{'msg.' + ${role}}"></label>
-						</li>
-					</ul>
-					<div class="form-group">
-						<button type="submit" class="btn btn-primary" th:text="#{button.save}"></button>
-						<a href="#" th:href="@{/user}" class="btn btn-default" role="button" th:text="#{button.cancel}"></a>	
+	<head>
+		<title th:text="#{user.create.title}"></title>
+	</head>
+	<body>
+		<div layout:fragment="content" class="container">
+			<div th:replace="fragments/alert :: alert_headline"></div>
+			<form id="userForm" th:action="@{/user}" th:object="${userCommand}" action="#" method="post" role="form">
+				<div class="row">
+					<div class="col-xs-12 col-sm-6 col-md-4">
+						<input type="hidden" th:field="*{userId}" class="form-control" />
+						<div class="form-group">
+							<label for="username" th:text="#{user.create.username} + ':'"></label> 
+							<input type="text" th:field="*{username}" class="form-control" size="12" maxlength="12"/>
+						</div>
+						<div class="form-group">
+							<label for="password" th:text="#{user.create.password} + ':'"></label> 
+							<input type="password" th:field="*{password}" class="form-control" />
+						</div>
+						<ul class="list-group">
+							<li class="list-group-item" th:each="role : ${userCommand.availableRoles}">
+								<input type="radio" th:field="*{roles}" th:value="${role}" th:disabled="${@securityService.isRoleSelectionDisabledForUser(userCommand.username)}" />
+								<label th:for="${#ids.prev('roles')}" th:text="#{'msg.' + ${role}}"></label>
+							</li>
+						</ul>
+						<div class="form-group">
+							<button type="submit" class="btn btn-primary" th:text="#{button.save}"></button>
+							<a href="#" th:href="@{/user}" class="btn btn-default" role="button" th:text="#{button.cancel}"></a>	
+						</div>
 					</div>
 				</div>
-			</div>
-		</form>
-	</div>
-</body>
+			</form>
+		</div>
+	</body>
 </html>
