--- a/src/main/resources/templates/bet/others.html
+++ b/src/main/resources/templates/bet/others.html
@@ -40,16 +40,17 @@
 								</div>
 								<div class="col-xs-4 top-bottom-space no-left-right-padding">
 									<span th:text="${bet.userName}" class="ranking-name"></span>			  									  		
-					  			</div>					
-					  			<div class="col-xs-4 top-bottom-space no-right-padding">
-					  				<span class="label label-as-badge big-badge label-success" th:classappend="${bet.getCssClassPenaltyWinnerOne()}" 
-					  					th:text="${bet.goalsTeamOne}"></span>
-								  	<span> : </span>
-							  		<span class="label label-as-badge big-badge label-success" th:classappend="${bet.getCssClassPenaltyWinnerTwo()}" 
-							  			th:text="${bet.goalsTeamTwo}"></span>	  			
-					  			</div>  			
-					  			<div class="col-xs-2 top-bottom-space">
-					  				<span class="label label-as-badge big-badge label-warning" th:text="${bet.points}"></span>
+					  			</div>	
+					  			<div class="col-xs-6 top-bottom-space">
+					  				<div class="right">
+						  				<span class="label label-as-badge big-badge label-success" th:classappend="${bet.getCssClassPenaltyWinnerOne()}" 
+						  					th:text="${bet.goalsTeamOne}"></span>
+									  	<span> : </span>
+								  		<span class="label label-as-badge big-badge label-success" th:classappend="${bet.getCssClassPenaltyWinnerTwo()}" 
+								  			th:text="${bet.goalsTeamTwo}"></span>	
+								  		<span>&nbsp;</span>
+						  				<span class="label label-as-badge big-badge label-warning" th:text="${bet.points}"></span>
+					  				</div>
 					  			</div>
 	     					</div>     					
 					   </div>					   
