--- a/src/main/resources/templates/bet/extra_bets.html
+++ b/src/main/resources/templates/bet/extra_bets.html
@@ -49,6 +49,23 @@
 					<div class="form-group">
 						<div class="panel panel-info">
 							<div class="panel-heading">
+								<span class="bold" th:text="#{extra_bets.thirdFinalWinner} + ':'"></span>
+								<span class="right" th:text="#{extra_bets.points(${@extraPointsCalculationService.getPointsThirdFinalWinner()})}"></span>
+							</div>
+							<div class="panel-body">
+								<select th:field="*{thirdFinalWinner}" class="form-control">
+								  <option th:each="country : ${availableCountries}" th:value="${country}" th:text="#{${'country.' + country.isoCode}}"></option>
+								</select>
+							</div>
+						</div>	
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xs-12 col-sm-6 col-md-4">
+					<div class="form-group">
+						<div class="panel panel-danger">
+							<div class="panel-heading">
 								<span class="bold" th:text="#{extra_bets.reachedPoints} + ':'"></span>
 								<span class="right label label-as-badge big-badge" th:classappend="${extraBetCommand.points != null} ? label-warning : label-default" 
 					  					      th:text="${extraBetCommand.points != null ? extraBetCommand.points : '?'}"></span>
