update statistic for extra bets

--- a/src/main/resources/templates/info/statistic.html
+++ b/src/main/resources/templates/info/statistic.html
@@ -20,6 +20,9 @@
 							<img class="flag" th:src="@{${statistic.favoriteCountry.getIconPath()}}"/>	
 							<span th:text="' (' + ${statistic.pointsFavoriteCountry} + ')'"></span>
 							<span th:if="${statistic.maxFavoriteCountryCandidate}" class="fa fa-star blue" aria-hidden="true"></span>
+							<span>,</span>
+							<span class="fa fa-magic" aria-hidden="true"></span>
+							<span th:text="'(' + ${statistic.getPointsForExtraBets()} + ')'"></span>
 					   </div>
 					   <div class="panel-body">
 						   <div class="table-responsive">
