--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -135,6 +135,10 @@ img.displayed {
 	margin-right: auto
 }
 
+img.gallery {
+	vertical-align: baseline;
+}
+
 .top-bottom-space {
 	padding-top: 5px;
 	padding-bottom: 5px;
